--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Carrito</title>
+    <title>Carrito HR</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
@@ -13,8 +13,8 @@
 <header id="header" class="header">
     <div class="container">
         <div class="row">
-            <div class="four columns">
-                <img src="img/logo.jpg" id="logo">
+            <div class="two columns">
+                <img src="img/hr.png" id="logo">                
             </div>
             <div class="two columns u-pull-right">
                 <ul>
@@ -50,10 +50,10 @@
             <div class="row">
                     <div class="six columns">
                         <div class="contenido-hero">
-                                <h2>Aprende algo nuevo</h2>
-                                <p>Todos los cursos a $15</p>
+                                <h2>Lleva tu gestión en HR más lejos</h2>
+                                <p>¡Explora nuestros cursos!</p>
                                 <form action="#" id="busqueda" method="post" class="formulario">
-                                    <input class="u-full-width" type="text" placeholder="¿Que te gustaría Aprender?" id="buscador">
+                                    <input class="u-full-width" type="text" placeholder="¿Qué te gustaría Aprender?" id="buscador">
                                     <input type="submit" id="submit-buscador" class="submit-buscador">
                                 </form>
                         </div>
@@ -83,16 +83,16 @@
     </div>
 
     <div id="lista-cursos" class="container">
-        <h1 id="encabezado" class="encabezado">Cursos En Línea</h1>
+        <h1 id="encabezado" class="encabezado">¡Inscribite!</h1>
         <div class="row">
             <div class="four columns">
                 <div class="card">
                     <img src="img/curso1.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
-                        <h4>HTML5, CSS3, JavaScript para Principiantes</h4>
-                        <p>Juan Pedro</p>
+                        <h4>People Analytics</h4>
+                        <p>John Doe</p>
                         <img src="img/estrellas.png">
-                        <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$180  <span class="u-pull-right ">$25</span></p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="1">Agregar Al Carrito</a>
                     </div>
                 </div> <!--.card-->
@@ -101,10 +101,10 @@
                     <div class="card">
                         <img src="img/curso2.jpg" class="imagen-curso u-full-width">
                         <div class="info-card">
-                            <h4>Curso de Comida Vegetariana</h4>
-                            <p>Juan Pedro</p>
+                            <h4>Automation for HR</h4>
+                            <p>Lorem Ipsum</p>
                             <img src="img/estrellas.png">
-                            <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
+                            <p class="precio">$135  <span class="u-pull-right ">$9.99</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="2">Agregar Al Carrito</a>
                         </div>
                     </div>
@@ -113,8 +113,8 @@
                     <div class="card">
                         <img src="img/curso3.jpg" class="imagen-curso u-full-width">
                         <div class="info-card">
-                            <h4>Guitarra para Principiantes</h4>
-                            <p>Juan Pedro</p>
+                            <h4>Performance & OKR</h4>
+                            <p>Lorem Ipsum</p>
                             <img src="img/estrellas.png">
                             <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="3">Agregar Al Carrito</a>
@@ -128,10 +128,10 @@
                 <div class="card">
                     <img src="img/curso4.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
-                        <h4>Huerto en tu casa</h4>
-                        <p>Juan Pedro</p>
+                        <h4>Power BI for HR</h4>
+                        <p>John Doe</p>
                         <img src="img/estrellas.png">
-                        <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$120  <span class="u-pull-right ">$19</span></p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="4">Agregar Al Carrito</a>
                     </div>
                 </div> <!--.card-->
@@ -140,8 +140,8 @@
                     <div class="card">
                         <img src="img/curso5.jpg" class="imagen-curso u-full-width">
                         <div class="info-card">
-                            <h4>Decoración con productos de tu hogar</h4>
-                            <p>Juan Pedro</p>
+                            <h4>Onboarding</h4>
+                            <p>Douglas McKenzie</p>
                             <img src="img/estrellas.png">
                             <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="5">Agregar Al Carrito</a>
@@ -150,10 +150,10 @@
             </div>
             <div class="four columns">
                     <div class="card">
-                        <img src="img/curso1.jpg" class="imagen-curso u-full-width">
+                        <img src="img/curso6.jpg" class="imagen-curso u-full-width">
                         <div class="info-card">
-                            <h4>Diseño Web para Principiantes</h4>
-                            <p>Juan Pedro</p>
+                            <h4>R & Python for HR</h4>
+                            <p>William Donnie</p>
                             <img src="img/estrellas.png">
                             <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="6">Agregar Al Carrito</a>
@@ -164,12 +164,12 @@
         <div class="row">
             <div class="four columns">
                 <div class="card">
-                    <img src="img/curso2.jpg" class="imagen-curso u-full-width">
+                    <img src="img/curso7.jpg" class="imagen-curso u-full-width">
                     <div class="info-card">
-                        <h4>Comida Mexicana para principiantes</h4>
-                        <p>Juan Pedro</p>
+                        <h4>Agile Coach</h4>
+                        <p>Jamie Derek</p>
                         <img src="img/estrellas.png">
-                        <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
+                        <p class="precio">$300  <span class="u-pull-right ">$60</span></p>
                         <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="7">Agregar Al Carrito</a>
                     </div>
                 </div> <!--.card-->
@@ -178,10 +178,10 @@
                     <div class="card">
                         <img src="img/curso3.jpg" class="imagen-curso u-full-width">
                         <div class="info-card">
-                            <h4>Estudio Musical en tu casa</h4>
-                            <p>Juan Pedro</p>
+                            <h4>Recruiting Analytics</h4>
+                            <p>Marcos Andrés</p>
                             <img src="img/estrellas.png">
-                            <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
+                            <p class="precio">$99  <span class="u-pull-right ">$8.99</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="8">Agregar Al Carrito</a>
                         </div>
                     </div> <!--.card-->
@@ -190,10 +190,10 @@
                     <div class="card">
                         <img src="img/curso4.jpg" class="imagen-curso u-full-width">
                         <div class="info-card">
-                            <h4>Cosecha tus propias frutas y verduras</h4>
-                            <p>Juan Pedro</p>
+                            <h4>Employee Experience</h4>
+                            <p>Carlos Sanchez</p>
                             <img src="img/estrellas.png">
-                            <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
+                            <p class="precio">$100  <span class="u-pull-right ">$12</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="9">Agregar Al Carrito</a>
                         </div>
                     </div> <!--.card-->
@@ -204,10 +204,10 @@
                     <div class="card">
                         <img src="img/curso5.jpg" class="imagen-curso u-full-width">
                         <div class="info-card">
-                            <h4>Prepara galletas caseras</h4>
-                            <p>Juan Pedro</p>
+                            <h4>People Management</h4>
+                            <p>Lisa Dron</p>
                             <img src="img/estrellas.png">
-                            <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
+                            <p class="precio">$100  <span class="u-pull-right ">$14</span></p>
                             <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="10">Agregar Al Carrito</a>
                         </div>
                     </div> <!--.card-->
@@ -216,8 +216,8 @@
                         <div class="card">
                             <img src="img/curso1.jpg" class="imagen-curso u-full-width">
                             <div class="info-card">
-                                <h4>JavaScript Moderno con ES6</h4>
-                                <p>Juan Pedro</p>
+                                <h4>Excel for HR</h4>
+                                <p>Ben Dolins</p>
                                 <img src="img/estrellas.png">
                                 <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
                                 <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="11">Agregar Al Carrito</a>
@@ -228,10 +228,10 @@
                         <div class="card">
                             <img src="img/curso2.jpg" class="imagen-curso u-full-width">
                             <div class="info-card">
-                                <h4>100 Recetas de Comida Natural</h4>
-                                <p>Juan Pedro</p>
+                                <h4>HCM Systems</h4>
+                                <p>John Doe</p>
                                 <img src="img/estrellas.png">
-                                <p class="precio">$200  <span class="u-pull-right ">$15</span></p>
+                                <p class="precio">$130  <span class="u-pull-right ">$19</span></p>
                                 <a href="#" class="u-full-width button-primary button input agregar-carrito" data-id="12">Agregar Al Carrito</a>
                             </div>
                         </div> <!--.card-->
@@ -245,7 +245,7 @@
                     <div class="four columns">
                             <nav id="principal" class="menu">
                                 <a class="enlace" href="#">Para tu Negocio</a>
-                                <a class="enlace" href="#">Conviertete en Instructor</a>
+                                <a class="enlace" href="#">Conviértete en Instructor</a>
                                 <a class="enlace" href="#">Aplicaciones Móviles</a>
                                 <a class="enlace" href="#">Soporte</a>
                                 <a class="enlace" href="#">Temas</a>
@@ -253,7 +253,7 @@
                     </div>
                     <div class="four columns">
                             <nav id="secundaria" class="menu">
-                                <a class="enlace" href="#">¿Quienes Somos?</a>
+                                <a class="enlace" href="#">¿Quiénes Somos?</a>
                                 <a class="enlace" href="#">Empleo</a>
                                 <a class="enlace" href="#">Blog</a>
                             </nav>
